ngnix_service.yaml
# apiVersion: v1
# # Tipo de fichero que se va a crear.
# kind: Service
# # Aquí van los datos propios del pod como el nombre y los labels que tiene asociados para seleccionarlo
# metadata:
#     name: my-nginx-service
# # Contiene la especificación del pod
# spec:
#     type: LoadBalancer
#     # En esta propiedad se indican todos los pods que apuntan a este servkice. En este caso, se va a encargar de todos los que tengan el valor "nginx" en el label "app"
#     selector:
#         app: my-nginx
#     ports:
#       # Indica el puerto en el que se debería de servir este servicio
#       - port: 80
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app.amordemaria.store
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
