test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: app.amordemaria.store
    http:
     paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80


# // {
# //     "tenantId": "d6438082-eb98-4c3f-8397-5dbdfe4036fd",
# //     "subscriptionId": "19aae2bc-35bf-4b99-b57e-075e370ff8b6",
# //     "resourceGroup": "tesis-rg",
# //     "aadClientId": "d6438082-eb98-4c3f-8397-5dbdfe4036fd",
# //     "aadClientSecret": "yB4DfZJ0QGtRRfkpT-loq6fjkuDF-8F_9Y"
# // }
